tests/spec/emit/snapshots/if_let_irrefutable_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct P { v: int }\nfn mk() -> P { P { v: 1 } }\n\nfn test() {\n  if let P { v: _ } = mk() {\n    ()\n  }\n}\n"
---
package main

type P struct {
	v int
}

func mk() P {
	return P{v: 1}
}

func test() {
	_ = mk()
}
