tests/spec/emit/snapshots/if_let_irrefutable_with_else.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test(x: int) -> int {\n  if let y = x {\n    y * 2\n  } else {\n    0\n  }\n}\n"
---
package main

func test(x int) int {
	{
		return x * 2
	}
}
