tests/spec/emit/snapshots/if_let_none_on_comma_ok_call.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn divide(a: int, b: int) -> Option<int> {
    if b == 0 { None } else { Some(a / b) }
  }
  
  fn test() {
    if let None = divide(100, 0) {
      let _ = fmt.Print("division by zero\n");
    }
  }
---
package main

import "fmt"

func divide(a, b int) (int, bool) {
	if b == 0 {
		return 0, false
	}
	return a / b, true
}

func test() {
	if _, ok := divide(100, 0); !ok {
		fmt.Print("division by zero\n")
	}
}
