tests/spec/emit/snapshots/if_let_on_array_get_indexes_the_array_directly.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn first(a: Array<int, 3>, i: int) -> int {
    if let Some(v) = a.get(i) { v } else { 0 }
  }
---
package main

func first(a [3]int, i int) int {
	if i >= 0 && i < len(a) {
		return a[i]
	}
	return 0
}
