tests/spec/emit/snapshots/if_let_or_pattern_unused_branch_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E { A(int), B(int), C }
  fn test() {
    let x = 5
    let e = E.C
    if let E.A(x) | E.B(x) = e {
      panic("unexpected")
    } else {
      if x != 5 { panic("shadow") }
    }
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag uint8

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func test() {
	x := 5
	e := MakeEC()
	switch e.Tag {
	case EA:
		panic("unexpected")
	case EB:
		panic("unexpected")
	default:
		if x != 5 {
			panic("shadow")
		}
	}
}
