tests/spec/emit/snapshots/if_let_statement.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test(opt: Option<int>) {\n  if let Some(x) = opt {\n    let y = x + 1;\n  }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) {
	if opt.Tag == lisette.OptionSome {
		_ = opt.SomeVal + 1
	}
}
