tests/spec/emit/snapshots/if_let_without_else_branch.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn divide(a: int, b: int) -> Option<int> {
    if b == 0 { None } else { Some(a / b) }
  }
  
  fn test() {
    if let Some(x) = divide(100, 10) {
      let _ = fmt.Print(f"Result: {x}\n");
    }
  }
---
package main

import "fmt"

func divide(a, b int) (int, bool) {
	if b == 0 {
		return 0, false
	}
	return a / b, true
}

func test() {
	if x, ok := divide(100, 10); ok {
		fmt.Printf("Result: %d\n", x)
	}
}
