tests/spec/emit/snapshots/if_returning_value.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(x: int) -> int {
    if x > 10 { 20 } else { 5 }
  }
---
package main

func test(x int) int {
	if x > 10 {
		return 20
	}
	return 5
}
